<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/room_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_room_one" android:fontFamily="@font/roboto"
            android:textAlignment="center" app:layout_constraintBaseline_toBaselineOf="@+id/button_room_two"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toStartOf="@+id/button_room_two"/>
    <Button
            android:text="@string/room_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_room_two" android:fontFamily="@font/roboto"
            android:textAlignment="center" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/room_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_room_three" android:fontFamily="@font/roboto"
            android:textAlignment="center" app:layout_constraintBaseline_toBaselineOf="@+id/button_room_two"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_room_two" android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/license_edit_text" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/button_room_two" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/license"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/brand_edit_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/license_edit_text" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/brand"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_edit_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/brand_edit_text" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/name"/>
    <Button
            android:text="@string/button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_update" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/button_delete" android:layout_marginEnd="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_delete"/>
    <Button
            android:text="@string/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_delete" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/button_update"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/parking_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_text" android:fontFamily="@font/roboto" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>